# evonn

./: .gitignore  CMakeLists.txt  Figures.ipynb  LICENSE  README.md  irun_evonn.sh  irun_slstm_evol.sh  mod_slstm_omp_evol.f90  run_survey.py  slstm_article.f90  survPD0325.py
src/: evonn.f90  mod_evonn.f90  mod_rw_hdf5.f90  mod_slstm_omp_evol.f90  slstm_article.f90
